# compliance-copilot

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  pyproject.toml  structure.txt
.github/workflows/: deploy.yml
app/: main.py
app/agent/: agent.py  prompts.py  tools.py
app/api/: qa.py  upload.py
app/ingestion/: chunking.py  parser.py  pipeline.py
app/rag/: chunking.py  retrieval.py  vector_store.py
app/retrieval/: retriever.py  vector_store.py
app/services/: embeddings.py  llm.py
ui/: api_client.py  main.py
ui/styles/: main.css
