[project]
name = "compliance-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.40.0",
]
