[project]
name = "compliance-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "uuid>=1.30",
    "uvicorn>=0.40.0",
]
